added cards for projects, added about me text, background gradient

--- a/assets/scss/components/_cards.scss
+++ b/assets/scss/components/_cards.scss
@@ -19,8 +19,9 @@
 
 
   .card-title {
-    font-size: 24px;
-    font-weight: 300;
+    font-size: 32px;
+    font-weight: 500;
+    @extend .white-text;
     &.activator {
       cursor: pointer;
     }
