--- a/assets/scss/components/_variables.scss
+++ b/assets/scss/components/_variables.scss
@@ -35,9 +35,9 @@
 // 1. Colors
 // ==========================================================================
 
-$primary-color: color("materialize-red", "lighten-2") !default;
-$primary-color-light: lighten($primary-color, 15%) !default;
-$primary-color-dark: darken($primary-color, 15%) !default;
+$primary-color: color("blue-grey", "darken-3") !default;
+$primary-color-light: lighten($primary-color, 25%) !default;
+$primary-color-dark: darken($primary-color, 25%) !default;
 
 $secondary-color: color("teal", "lighten-1") !default;
 $success-color: color("green", "base") !default;
@@ -95,7 +95,7 @@ $button-floating-radius: 50% !default;
 
 $card-padding: 24px !default;
 $card-bg-color: #fff !default;
-$card-link-color: color("orange", "accent-2") !default;
+$card-link-color: color("pink", "accent-3") !default;
 $card-link-color-light: lighten($card-link-color, 20%) !default;
 
 
