--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -1,3 +1,13 @@
+.main-header {
+  font-weight: normal;
+  height: 500px; }
+
+.my-name {
+  font-family: 'Raleway', sans-serif; }
+
+.card-title {
+  color: black !important; }
+
 .materialize-red {
   background-color: #e51c23 !important; }
 
@@ -124,7 +134,7 @@
 .red-text.text-accent-1 {
   color: #FF8A80 !important; }
 
-.red.accent-2 {
+.red.accent-2, .red.my-name {
   background-color: #FF5252 !important; }
 
 .red-text.text-accent-2 {
@@ -208,7 +218,7 @@
 .pink-text.text-accent-1 {
   color: #ff80ab !important; }
 
-.pink.accent-2 {
+.pink.accent-2, .pink.my-name {
   background-color: #ff4081 !important; }
 
 .pink-text.text-accent-2 {
@@ -229,85 +239,85 @@
 .purple {
   background-color: #9c27b0 !important; }
 
-.purple-text {
+.purple-text, .my-name {
   color: #9c27b0 !important; }
 
 .purple.lighten-5 {
   background-color: #f3e5f5 !important; }
 
-.purple-text.text-lighten-5 {
+.purple-text.text-lighten-5, .text-lighten-5.my-name {
   color: #f3e5f5 !important; }
 
 .purple.lighten-4 {
   background-color: #e1bee7 !important; }
 
-.purple-text.text-lighten-4 {
+.purple-text.text-lighten-4, .text-lighten-4.my-name {
   color: #e1bee7 !important; }
 
 .purple.lighten-3 {
   background-color: #ce93d8 !important; }
 
-.purple-text.text-lighten-3 {
+.purple-text.text-lighten-3, .text-lighten-3.my-name {
   color: #ce93d8 !important; }
 
 .purple.lighten-2 {
   background-color: #ba68c8 !important; }
 
-.purple-text.text-lighten-2 {
+.purple-text.text-lighten-2, .text-lighten-2.my-name {
   color: #ba68c8 !important; }
 
 .purple.lighten-1 {
   background-color: #ab47bc !important; }
 
-.purple-text.text-lighten-1 {
+.purple-text.text-lighten-1, .text-lighten-1.my-name {
   color: #ab47bc !important; }
 
 .purple.darken-1 {
   background-color: #8e24aa !important; }
 
-.purple-text.text-darken-1 {
+.purple-text.text-darken-1, .text-darken-1.my-name {
   color: #8e24aa !important; }
 
 .purple.darken-2 {
   background-color: #7b1fa2 !important; }
 
-.purple-text.text-darken-2 {
+.purple-text.text-darken-2, .text-darken-2.my-name {
   color: #7b1fa2 !important; }
 
 .purple.darken-3 {
   background-color: #6a1b9a !important; }
 
-.purple-text.text-darken-3 {
+.purple-text.text-darken-3, .text-darken-3.my-name {
   color: #6a1b9a !important; }
 
 .purple.darken-4 {
   background-color: #4a148c !important; }
 
-.purple-text.text-darken-4 {
+.purple-text.text-darken-4, .text-darken-4.my-name {
   color: #4a148c !important; }
 
 .purple.accent-1 {
   background-color: #ea80fc !important; }
 
-.purple-text.text-accent-1 {
+.purple-text.text-accent-1, .text-accent-1.my-name {
   color: #ea80fc !important; }
 
-.purple.accent-2 {
+.purple.accent-2, .purple.my-name {
   background-color: #e040fb !important; }
 
-.purple-text.text-accent-2 {
+.purple-text.text-accent-2, .text-accent-2.my-name {
   color: #e040fb !important; }
 
 .purple.accent-3 {
   background-color: #d500f9 !important; }
 
-.purple-text.text-accent-3 {
+.purple-text.text-accent-3, .text-accent-3.my-name {
   color: #d500f9 !important; }
 
 .purple.accent-4 {
   background-color: #aa00ff !important; }
 
-.purple-text.text-accent-4 {
+.purple-text.text-accent-4, .text-accent-4.my-name {
   color: #aa00ff !important; }
 
 .deep-purple {
@@ -376,7 +386,7 @@
 .deep-purple-text.text-accent-1 {
   color: #b388ff !important; }
 
-.deep-purple.accent-2 {
+.deep-purple.accent-2, .deep-purple.my-name {
   background-color: #7c4dff !important; }
 
 .deep-purple-text.text-accent-2 {
@@ -460,7 +470,7 @@
 .indigo-text.text-accent-1 {
   color: #8c9eff !important; }
 
-.indigo.accent-2 {
+.indigo.accent-2, .indigo.my-name {
   background-color: #536dfe !important; }
 
 .indigo-text.text-accent-2 {
@@ -544,7 +554,7 @@
 .blue-text.text-accent-1 {
   color: #82B1FF !important; }
 
-.blue.accent-2 {
+.blue.accent-2, .blue.my-name {
   background-color: #448AFF !important; }
 
 .blue-text.text-accent-2 {
@@ -628,7 +638,7 @@
 .light-blue-text.text-accent-1 {
   color: #80d8ff !important; }
 
-.light-blue.accent-2 {
+.light-blue.accent-2, .light-blue.my-name {
   background-color: #40c4ff !important; }
 
 .light-blue-text.text-accent-2 {
@@ -712,7 +722,7 @@
 .cyan-text.text-accent-1 {
   color: #84ffff !important; }
 
-.cyan.accent-2 {
+.cyan.accent-2, .cyan.my-name {
   background-color: #18ffff !important; }
 
 .cyan-text.text-accent-2 {
@@ -796,7 +806,7 @@
 .teal-text.text-accent-1 {
   color: #a7ffeb !important; }
 
-.teal.accent-2 {
+.teal.accent-2, .teal.my-name {
   background-color: #64ffda !important; }
 
 .teal-text.text-accent-2 {
@@ -880,7 +890,7 @@
 .green-text.text-accent-1 {
   color: #B9F6CA !important; }
 
-.green.accent-2 {
+.green.accent-2, .green.my-name {
   background-color: #69F0AE !important; }
 
 .green-text.text-accent-2 {
@@ -964,7 +974,7 @@
 .light-green-text.text-accent-1 {
   color: #ccff90 !important; }
 
-.light-green.accent-2 {
+.light-green.accent-2, .light-green.my-name {
   background-color: #b2ff59 !important; }
 
 .light-green-text.text-accent-2 {
@@ -1048,7 +1058,7 @@
 .lime-text.text-accent-1 {
   color: #f4ff81 !important; }
 
-.lime.accent-2 {
+.lime.accent-2, .lime.my-name {
   background-color: #eeff41 !important; }
 
 .lime-text.text-accent-2 {
@@ -1132,7 +1142,7 @@
 .yellow-text.text-accent-1 {
   color: #ffff8d !important; }
 
-.yellow.accent-2 {
+.yellow.accent-2, .yellow.my-name {
   background-color: #ffff00 !important; }
 
 .yellow-text.text-accent-2 {
@@ -1216,7 +1226,7 @@
 .amber-text.text-accent-1 {
   color: #ffe57f !important; }
 
-.amber.accent-2 {
+.amber.accent-2, .amber.my-name {
   background-color: #ffd740 !important; }
 
 .amber-text.text-accent-2 {
@@ -1300,7 +1310,7 @@
 .orange-text.text-accent-1 {
   color: #ffd180 !important; }
 
-.orange.accent-2 {
+.orange.accent-2, .orange.my-name {
   background-color: #ffab40 !important; }
 
 .orange-text.text-accent-2 {
@@ -1384,7 +1394,7 @@
 .deep-orange-text.text-accent-1 {
   color: #ff9e80 !important; }
 
-.deep-orange.accent-2 {
+.deep-orange.accent-2, .deep-orange.my-name {
   background-color: #ff6e40 !important; }
 
 .deep-orange-text.text-accent-2 {
@@ -1591,7 +1601,7 @@
 .white {
   background-color: #FFFFFF !important; }
 
-.white-text {
+.white-text, .main-header, .card .card-title {
   color: #FFFFFF !important; }
 
 .transparent {
@@ -2013,7 +2023,7 @@ a {
 blockquote {
   margin: 20px 0;
   padding-left: 1.5rem;
-  border-left: 5px solid #ee6e73; }
+  border-left: 5px solid #37474f; }
 
 i {
   line-height: inherit; }
@@ -2052,7 +2062,7 @@ video.responsive-video {
   .pagination li.active a {
     color: #fff; }
   .pagination li.active {
-    background-color: #ee6e73; }
+    background-color: #37474f; }
   .pagination li.disabled a {
     cursor: default;
     color: #999; }
@@ -2184,7 +2194,7 @@ ul.staggered-list li {
 .page-footer {
   padding-top: 20px;
   color: #fff;
-  background-color: #ee6e73; }
+  background-color: #37474f; }
   .page-footer .footer-copyright {
     overflow: hidden;
     min-height: 50px;
@@ -3078,7 +3088,7 @@ nav ul a span.badge {
 
 nav {
   color: #fff;
-  background-color: #ee6e73;
+  background-color: #37474f;
   width: 100%;
   height: 56px;
   line-height: 56px; }
@@ -3393,8 +3403,8 @@ small {
   transition: box-shadow .25s;
   border-radius: 2px; }
   .card .card-title {
-    font-size: 24px;
-    font-weight: 300; }
+    font-size: 32px;
+    font-weight: 500; }
     .card .card-title.activator {
       cursor: pointer; }
   .card.small, .card.medium, .card.large {
@@ -3482,12 +3492,12 @@ small {
     .card .card-action:last-child {
       border-radius: 0 0 2px 2px; }
     .card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating) {
-      color: #ffab40;
+      color: #f50057;
       margin-right: 24px;
       transition: color .3s ease;
       text-transform: uppercase; }
       .card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating):hover {
-        color: #ffd8a6; }
+        color: #ff5c96; }
   .card .card-reveal {
     padding: 24px;
     position: absolute;
@@ -3587,7 +3597,7 @@ small {
     margin: 0;
     text-transform: uppercase; }
     .tabs .tab a {
-      color: rgba(238, 110, 115, 0.7);
+      color: rgba(55, 71, 79, 0.7);
       display: block;
       width: 100%;
       height: 100%;
@@ -3598,15 +3608,15 @@ small {
       transition: color .28s ease; }
       .tabs .tab a:hover, .tabs .tab a.active {
         background-color: transparent;
-        color: #ee6e73; }
+        color: #37474f; }
     .tabs .tab.disabled a, .tabs .tab.disabled a:hover {
-      color: rgba(238, 110, 115, 0.7);
+      color: rgba(55, 71, 79, 0.7);
       cursor: default; }
   .tabs .indicator {
     position: absolute;
     bottom: 0;
     height: 2px;
-    background-color: #f6b2b5;
+    background-color: #6c8a99;
     will-change: left, right; }
 
 @media only screen and (max-width: 992px) {
@@ -5295,11 +5305,11 @@ input[type=range]:focus::-ms-fill-upper {
   .table-of-contents a:hover {
     color: #a8a8a8;
     padding-left: 19px;
-    border-left: 1px solid #ee6e73; }
+    border-left: 1px solid #37474f; }
   .table-of-contents a.active {
     font-weight: 500;
     padding-left: 18px;
-    border-left: 2px solid #ee6e73; }
+    border-left: 2px solid #37474f; }
 
 .side-nav {
   position: fixed;
@@ -5440,7 +5450,7 @@ input[type=range]:focus::-ms-fill-upper {
     padding: 16px 16px 0; } }
 .side-nav .collapsible-body > ul:not(.collapsible) > li.active,
 .side-nav.fixed .collapsible-body > ul:not(.collapsible) > li.active {
-  background-color: #ee6e73; }
+  background-color: #37474f; }
   .side-nav .collapsible-body > ul:not(.collapsible) > li.active a,
   .side-nav.fixed .collapsible-body > ul:not(.collapsible) > li.active a {
     color: #fff; }
@@ -5972,7 +5982,7 @@ input[type=range]:focus::-ms-fill-upper {
   position: absolute;
   font-size: 1rem;
   border-radius: 50%;
-  background-color: #ee6e73;
+  background-color: #37474f;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.14), 0 10px 50px 0 rgba(0, 0, 0, 0.12), 0 30px 10px -20px rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 100%;
