--- a/assets/scss/materialize.scss
+++ b/assets/scss/materialize.scss
@@ -1,5 +1,16 @@
 @charset "UTF-8";
-
+.main-header{
+  font-weight: normal;
+  height: 500px;
+  @extend .white-text;
+}
+.my-name{
+  font-family: 'Raleway', sans-serif;
+  @extend .purple-text, .accent-2;
+}
+.card-title{
+  color: black !important;
+}
 // Colors
 @import "components/color";
 
