--- a/assets/scss/materialize.scss
+++ b/assets/scss/materialize.scss
@@ -1,9 +1,22 @@
 @charset "UTF-8";
 .main-header{
   font-weight: normal;
-  height: 500px;
+  height: 800px;
   @extend .white-text;
 }
+.margin-bottom{
+  margin-bottom: 150px !important;
+}
+.pad-bottom{
+  padding-bottom: 50px !important;
+}
+.nav-bar{
+  position: fixed;
+  top: 0;
+  bottom: auto;
+  z-index: 5;
+}
+
 .my-name{
   font-family: 'Raleway', sans-serif;
   @extend .purple-text, .accent-2;
